--- a/index.html
+++ b/index.html
@@ -1,132 +1,131 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Diccionario Interactivo</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      transition: background 0.5s, color 0.5s;
-    }
-    #search {
-      width: 100%;
-      padding: 10px;
-      font-size: 16px;
-      margin-bottom: 20px;
-    }
-    .word-card {
-      border: 1px solid #ccc;
-      padding: 10px 15px;
-      margin-bottom: 10px;
-      border-radius: 8px;
-      background: rgba(255,255,255,0.8);
-      transition: background 0.3s;
-    }
-    .word-card:hover {
-      background: rgba(255,255,255,1);
-    }
-    .ejemplo {
-      font-style: italic;
-      color: #555;
-    }
-    .no-results {
-      color: #888;
-      font-style: italic;
-    }
-    #colorPicker {
-      margin-top: 20px;
-      padding: 5px;
-    }
-    #logo {
-      display: block;
-      margin: 20px 0;
-      width: 120px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Diccionario Interactivo</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    transition: background 0.5s, color 0.5s;
+  }
+  #search {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+  #dictionary {
+    margin-top: 10px;
+  }
+  .word-card {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    background: #fff;
+  }
+  .ejemplo {
+    font-style: italic;
+    color: #555;
+  }
+  .no-results {
+    font-style: italic;
+    color: #888;
+  }
+  #colorPicker {
+    margin-top: 20px;
+  }
+  #logo {
+    display: block;
+    margin-top: 20px;
+    width: 120px;
+  }
+</style>
 </head>
 <body>
 
-  <input type="text" id="search" placeholder="Busca una palabra...">
-  <div id="dictionary">
-    <p class="no-results">Cargando diccionario...</p>
-  </div>
+<input type="text" id="search" placeholder="Escribe una palabra...">
+<div id="dictionary"><p class="no-results">Cargando diccionario...</p></div>
 
-  <input type="color" id="colorPicker" value="#ff9f43">
-  <img id="logo" src="logo.png" alt="logo">
+<input type="color" id="colorPicker" value="#ff9f43">
+<img id="logo" src="logo.png" alt="logo">
 
-  <script>
-    let words = [];
+<script>
+let words = [];
 
-    const search = document.getElementById("search");
-    const dict = document.getElementById("dictionary");
-    const picker = document.getElementById("colorPicker");
-    const logo = document.getElementById("logo");
+const search = document.getElementById("search");
+const dict = document.getElementById("dictionary");
+const picker = document.getElementById("colorPicker");
+const logo = document.getElementById("logo");
 
-    /* -------- CARGAR JSON -------- */
-    fetch('words.json')
-      .then(response => response.json())
-      .then(data => {
-        words = data;
-        dict.innerHTML = '<p class="no-results">Escribe una palabra para buscar...</p>';
-      })
-      .catch(err => {
-        console.error("Error al cargar JSON:", err);
-        dict.innerHTML = '<p class="no-results">No se pudo cargar el diccionario.</p>';
-      });
+/* -------- CARGAR JSON -------- */
+fetch('words.json')
+  .then(response => response.json())
+  .then(data => {
+    words = data;
+    dict.innerHTML = '<p class="no-results">Escribe una palabra para buscar...</p>';
+  })
+  .catch(err => {
+    console.error("Error al cargar JSON:", err);
+    dict.innerHTML = '<p class="no-results">No se pudo cargar el diccionario.</p>';
+  });
 
-    /* -------- BUSCADOR -------- */
-    search.addEventListener("input", () => {
-      const t = search.value.toLowerCase();
-      dict.innerHTML = "";
+/* -------- BUSCADOR -------- */
+search.addEventListener("input", () => {
+  const t = search.value.toLowerCase();
+  dict.innerHTML = "";
 
-      if (!t) {
-        dict.innerHTML = '<p class="no-results">Escribe una palabra para buscar...</p>';
-        return;
-      }
+  if (!t) {
+    dict.innerHTML = '<p class="no-results">Escribe una palabra para buscar...</p>';
+    return;
+  }
 
-      const res = words.filter(w => w.palabra.toLowerCase().includes(t));
+  const res = words.filter(w => w.palabra.toLowerCase().includes(t));
 
-      if (res.length === 0) {
-        dict.innerHTML = '<p class="no-results">No se encontró ninguna palabra</p>';
-        return;
-      }
+  if (res.length === 0) {
+    dict.innerHTML = '<p class="no-results">No se encontró ninguna palabra</p>';
+    return;
+  }
 
-      let html = "";
-      res.forEach(w => {
-        html += `
-          <div class="word-card">
-            <h2>${w.palabra}</h2>
-            <p>${w.definicion}</p>
-            <p class="ejemplo">${w.ejemplo}</p>
-          </div>`;
-      });
-      dict.innerHTML = html;
-    });
+  let html = "";
+  res.forEach(w => {
+    html += `
+      <div class="word-card">
+        <h2>${w.palabra}</h2>
+        <p>${w.definicion}</p>
+        <p class="ejemplo">${w.ejemplo}</p>
+      </div>`;
+  });
+  dict.innerHTML = html;
+});
 
-    /* -------- COLOR REAL -------- */
-    function isDark(color) {
-      const c = color.substring(1);
-      const rgb = parseInt(c,16);
-      const r = (rgb>>16)&255;
-      const g = (rgb>>8)&255;
-      const b = rgb&255;
-      return (r*0.299 + g*0.587 + b*0.114) < 140;
-    }
+/* -------- COLOR REAL -------- */
+function isDark(color) {
+  const c = color.substring(1);
+  const rgb = parseInt(c,16);
+  const r = (rgb>>16)&255;
+  const g = (rgb>>8)&255;
+  const b = rgb&255;
+  return (r*0.299 + g*0.587 + b*0.114) < 140;
+}
 
-    picker.addEventListener("input", () => {
-      const color = picker.value;
-      document.documentElement.style.setProperty("--main-color", color);
+picker.addEventListener("input", () => {
+  const color = picker.value;
+  document.documentElement.style.setProperty("--main-color", color);
 
-      const dark = isDark(color);
-      document.body.style.background = dark ? color : `linear-gradient(135deg,#ffecd2,${color})`;
-      document.body.style.color = dark ? "white" : "#333";
+  const dark = isDark(color);
 
-      logo.style.filter = dark
-        ? "invert(1) brightness(1.2)"
-        : "brightness(0) saturate(100%) sepia(1) hue-rotate(220deg)";
-    });
-  </script>
+  document.body.style.background = dark ? color : `linear-gradient(135deg,#ffecd2,${color})`;
+  document.body.style.color = dark ? "white" : "#333";
+
+  logo.style.filter = dark
+    ? "invert(1) brightness(1.2)"
+    : "brightness(0) saturate(100%) sepia(1) hue-rotate(220deg)";
+});
+</script>
 
 </body>
 </html>
+
+
