--- a/index.html
+++ b/index.html
@@ -9,36 +9,57 @@
     margin: 20px;
     transition: background 0.5s, color 0.5s;
   }
+
   #search {
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     font-size: 16px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
     margin-bottom: 20px;
   }
+
   #dictionary {
-    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
   }
+
   .word-card {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 8px;
+    padding: 15px 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     background: #fff;
+    transition: transform 0.2s, box-shadow 0.2s;
   }
+
+  .word-card:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+  }
+
+  .word-card h2 {
+    margin: 0 0 5px 0;
+    color: var(--main-color, #ff9f43);
+  }
+
   .ejemplo {
     font-style: italic;
     color: #555;
   }
+
   .no-results {
     font-style: italic;
     color: #888;
   }
+
   #colorPicker {
     margin-top: 20px;
   }
+
   #logo {
     display: block;
-    margin-top: 20px;
+    margin: 20px 0;
     width: 120px;
   }
 </style>
@@ -46,9 +67,12 @@
 <body>
 
 <input type="text" id="search" placeholder="Escribe una palabra...">
-<div id="dictionary"><p class="no-results">Cargando diccionario...</p></div>
+<div id="dictionary">
+  <p class="no-results">Cargando diccionario...</p>
+</div>
 
 <input type="color" id="colorPicker" value="#ff9f43">
+<!-- Logo cargado desde logo.png en la misma carpeta -->
 <img id="logo" src="logo.png" alt="logo">
 
 <script>
@@ -115,7 +139,6 @@ picker.addEventListener("input", () => {
   document.documentElement.style.setProperty("--main-color", color);
 
   const dark = isDark(color);
-
   document.body.style.background = dark ? color : `linear-gradient(135deg,#ffecd2,${color})`;
   document.body.style.color = dark ? "white" : "#333";
 
@@ -127,5 +150,6 @@ picker.addEventListener("input", () => {
 
 </body>
 </html>
+
 
 
