--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Diccionario Ultra Pro HD</title>
+<title>Diccionario joven</title>
 
 <style>
 :root {
@@ -183,7 +183,8 @@ search.addEventListener("input", () => {
   dict.innerHTML = "";
 
   if (!t) {
-    dict.innerHTML = '<p class="no-results">Escribe una palabra para buscar...</p>';
+    dict.innerHTML = '<p class="no-results">
+"Made by computer science class" </p>';
     return;
   }
 
