--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Diccionario Ultra Pro Max Neon</title>
+<title>Diccionario joven</title>
 <style>
 :root {
   --main-color: #ff9f43;
